--- a/rag_question_answer_excel/src/requirements.txt
+++ b/rag_question_answer_excel/src/requirements.txt
@@ -1,24 +1,75 @@
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.3.3
 certifi==2022.12.7
 charset-normalizer==2.1.1
+click==8.1.7
 cmake==3.25.0
+distro==1.9.0
 filelock==3.13.1
+fsspec==2024.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.23.3
 idna==3.4
 Jinja2==3.1.3
+joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 lit==15.0.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.3
+openai==1.34.0
+packaging==24.1
+pandas==2.2.2
 pillow==10.2.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+pydeck==0.9.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
+regex==2024.5.15
 requests==2.28.1
+rich==13.7.1
+rpds-py==0.18.1
+safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
+sentence-transformers==3.0.1
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+streamlit==1.35.0
 sympy==1.12
+tenacity==8.3.0
+threadpoolctl==3.5.0
+tinydb==4.8.0
+tokenizers==0.19.1
+toml==0.10.2
+toolz==0.12.1
 torch==2.0.1+cu117
 torchaudio==2.0.2+cu117
 torchvision==0.15.2+cu117
+tornado==6.4.1
+tqdm==4.66.4
+transformers==4.41.2
 triton==2.0.0
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==1.26.13
-sentence-transformers==3.0.1
-tinydb==4.8.0
-scikit-learn==1.5.0
-pandas==2.2.2
+watchdog==4.0.1
