--- a/rag_question_answer_excel/src/requirements.txt
+++ b/rag_question_answer_excel/src/requirements.txt
@@ -1,59 +1,100 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+bert-score==0.3.13
 blinker==1.8.2
+bokeh==3.4.1
 cachetools==5.3.3
 certifi==2022.12.7
+chardet==5.2.0
 charset-normalizer==2.1.1
 click==8.1.7
+cloudpickle==3.0.0
 cmake==3.25.0
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
+datasets==2.20.0
+Deprecated==1.2.14
+dill==0.3.8
 distro==1.9.0
+docopt==0.6.2
+entrypoints==0.4
+evaluate==0.4.2
+faiss-cpu==1.8.0
 filelock==3.13.1
-fsspec==2024.6.0
+fonttools==4.53.0
+frozenlist==1.4.1
+fsspec==2024.5.0
+giskard==2.14.0
 gitdb==4.0.11
 GitPython==3.1.43
+griffe==0.47.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.23.3
 idna==3.4
+importlib_metadata==7.1.0
 Jinja2==3.1.3
 joblib==1.4.2
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+langdetect==1.0.9
 lit==15.0.7
+llvmlite==0.43.0
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 mdurl==0.1.2
+mixpanel==4.10.1
+mlflow-skinny==2.14.1
 mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
 networkx==3.2.1
+num2words==0.5.13
+numba==0.60.0
 numpy==1.26.3
 openai==1.34.0
+opentelemetry-api==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
 packaging==24.1
 pandas==2.2.2
 pillow==10.2.0
 protobuf==4.25.3
 pyarrow==16.1.0
+pyarrow-hotfix==0.6
 pydantic==2.7.4
 pydantic_core==2.18.4
 pydeck==0.9.1
 Pygments==2.18.0
+pynndescent==0.5.13
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.35.1
 regex==2024.5.15
-requests==2.28.1
+requests==2.32.3
+requests-toolbelt==1.0.0
 rich==13.7.1
 rpds-py==0.18.1
 safetensors==0.4.3
 scikit-learn==1.5.0
-scipy==1.13.1
+scipy==1.11.4
 sentence-transformers==3.0.1
+sentry-sdk==2.6.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+sqlparse==0.5.0
 streamlit==1.35.0
 sympy==1.12
 tenacity==8.3.0
@@ -71,5 +112,12 @@ transformers==4.41.2
 triton==2.0.0
 typing_extensions==4.9.0
 tzdata==2024.1
+umap-learn==0.5.6
 urllib3==1.26.13
 watchdog==4.0.1
+wrapt==1.16.0
+xxhash==3.4.1
+xyzservices==2024.6.0
+yarl==1.9.4
+zipp==3.19.2
+zstandard==0.22.0
