--- a/rag_question_answer_excel/src/requirements.txt
+++ b/rag_question_answer_excel/src/requirements.txt
@@ -3,98 +3,154 @@ aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.7.0
 anyio==4.4.0
+asgiref==3.8.1
 attrs==23.2.0
+backoff==2.2.1
+bcrypt==4.1.3
 bert-score==0.3.13
 blinker==1.8.2
 bokeh==3.4.1
+build==1.2.1
 cachetools==5.3.3
 certifi==2022.12.7
 chardet==5.2.0
 charset-normalizer==2.1.1
+chroma-hnswlib==0.7.3
+chromadb==0.5.3
 click==8.1.7
 cloudpickle==3.0.0
 cmake==3.25.0
 colorama==0.4.6
+coloredlogs==15.0.1
 contourpy==1.2.1
 cycler==0.12.1
+dataclasses-json==0.6.7
 datasets==2.20.0
 Deprecated==1.2.14
 dill==0.3.8
 distro==1.9.0
+dnspython==2.6.1
 docopt==0.6.2
+email_validator==2.2.0
 entrypoints==0.4
 evaluate==0.4.2
 faiss-cpu==1.8.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
 filelock==3.13.1
+flatbuffers==24.3.25
 fonttools==4.53.0
 frozenlist==1.4.1
 fsspec==2024.5.0
 giskard==2.14.0
 gitdb==4.0.11
 GitPython==3.1.43
+google-auth==2.30.0
+googleapis-common-protos==1.63.1
+greenlet==3.0.3
 griffe==0.47.0
+grpcio==1.64.1
 h11==0.14.0
 httpcore==1.0.5
+httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.23.3
+humanfriendly==10.0
 idna==3.4
 importlib_metadata==7.1.0
+importlib_resources==6.4.0
 Jinja2==3.1.3
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+kubernetes==30.1.0
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-core==0.2.9
+langchain-text-splitters==0.2.1
 langdetect==1.0.9
+langsmith==0.1.81
 lit==15.0.7
 llvmlite==0.43.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 matplotlib==3.9.0
 mdurl==0.1.2
 mixpanel==4.10.1
 mlflow-skinny==2.14.1
+mmh3==4.1.0
+monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
+mypy-extensions==1.0.0
 networkx==3.2.1
 num2words==0.5.13
 numba==0.60.0
 numpy==1.26.3
+oauthlib==3.2.2
+onnxruntime==1.16.3
 openai==1.34.0
 opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-instrumentation-asgi==0.46b0
+opentelemetry-instrumentation-fastapi==0.46b0
+opentelemetry-proto==1.25.0
 opentelemetry-sdk==1.25.0
 opentelemetry-semantic-conventions==0.46b0
+opentelemetry-util-http==0.46b0
+orjson==3.10.5
+overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.2.0
+posthog==3.5.0
 protobuf==4.25.3
 pyarrow==16.1.0
 pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.4
 pydantic_core==2.18.4
 pydeck==0.9.1
 Pygments==2.18.0
 pynndescent==0.5.13
 pyparsing==3.1.2
+pypdf==4.2.0
+PyPika==0.48.9
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.7.1
 rpds-py==0.18.1
+rsa==4.9
 safetensors==0.4.3
 scikit-learn==1.5.0
 scipy==1.11.4
 sentence-transformers==3.0.1
 sentry-sdk==2.6.0
+shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+SQLAlchemy==2.0.31
 sqlparse==0.5.0
+starlette==0.37.2
 streamlit==1.35.0
 sympy==1.12
 tenacity==8.3.0
@@ -110,11 +166,19 @@ tornado==6.4.1
 tqdm==4.66.4
 transformers==4.41.2
 triton==2.0.0
+typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2024.1
+ujson==5.10.0
 umap-learn==0.5.6
 urllib3==1.26.13
+uvicorn==0.30.1
+uvloop==0.19.0
 watchdog==4.0.1
+watchfiles==0.22.0
+websocket-client==1.8.0
+websockets==12.0
 wrapt==1.16.0
 xxhash==3.4.1
 xyzservices==2024.6.0
